[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "route6"
version = "0.1.2"
description = "Route6 thin client — tunnel localhost ports to *.on.route6.me + local MCP proxy. Python parity of @route6/agent (npm). Get an API key at https://route6.me"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Route6", email = "info@route6.me" }]
keywords = ["route6", "tunnel", "mcp", "ipv6", "agent", "ai-agent", "model-context-protocol"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Environment :: Console",
]
dependencies = [
  "httpx[http2]>=0.27,<1.0",
]

[project.scripts]
route6 = "route6.cli:main"

[project.urls]
Homepage = "https://route6.me"
Documentation = "https://docs.route6.me"
Source = "https://github.com/route6me/route6-python"
Issues = "https://github.com/route6me/route6-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/route6"]
